--- a/src/Libraries/RevitNodesUI/Controls/ComboControl.xaml
+++ b/src/Libraries/RevitNodesUI/Controls/ComboControl.xaml
@@ -31,7 +31,9 @@
         </Button>
         <ComboBox Grid.Row="1"
                   ItemsSource="{Binding Model.DropDownNodeModel.Items}"
-                  SelectedIndex="{Binding Model.SelectedIndex, Mode=TwoWay}"/>
+                  SelectedIndex="{Binding Model.SelectedIndex, Mode=TwoWay}"
+                  Style="{StaticResource RefreshComboBox}"
+                  Margin="0,0,0,0"/>
 
         <TextBlock Text="{Binding Model.Text}"
                    TextTrimming="WordEllipsis"
